examples/test/testpolicy9943.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9943
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value39
          key42: value36
          key39: value39
      podSelector:
        matchLabels:
          key43: value35
          key33: value2
          key20: value12
